[package]
name = "comic-book-roundup-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
cli-table = "0.4.7"
ego-tree = "0.6.2"
fuzzy-matcher = "0.3.7"
fuzzywuzzy = "0.0.2"
inquire = "0.5.3"
levenshtein = "1.0.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
thread = "0.1.0"
